--- a/public/stylesheets/profile.css
+++ b/public/stylesheets/profile.css
@@ -1,13 +1,12 @@
 body {
     margin: 0px;
     background-color: #faf5ff;
-    background-image: url("../images/closet-background.png");
-    color: #fff;
+    color: #330052;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 h2 {
-    color: #fff;
+    color: #330052;
     font-weight: 600;
     ;
 }
@@ -18,7 +17,7 @@ section h2 {
 
 h3 {
     font-size: 14px;
-    color: #ffffff;
+    color: #330052;
 }
 
 button {
@@ -29,12 +28,12 @@ button {
     cursor: pointer;
     display: inline-block;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    padding: 5px 25px ;
+    padding: 5px 25px;
     text-align: center;
     text-decoration: none;
     transition: all 250ms;
     border: 0;
-    font-size: 18px;
+    font-size: 16px;
     user-select: none;
     -webkit-user-select: none;
     touch-action: manipulation;
@@ -63,6 +62,6 @@ section {
 
 .authform {
     margin-top: 40px;
-    border-radius: 25px;
     padding: 50px;
 }
+
