--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -4,18 +4,22 @@
 </head>
 
 
+<center><div class="authform">
 <h2>Login</h2>
-
+<br>
 <form action="/login" method="post">
 <label for="username">
     username
     <input type="text" name="username">
 </label>
-
+<br>
+<br>
 <label for="password">
     password
     <input type="text" name="password">
 </label>
-
+<br>
+<br>
 <button>Login</button>
 </form>
+</div></center>
