--- a/views/auth/profile.hbs
+++ b/views/auth/profile.hbs
@@ -1,9 +1,9 @@
 <head>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/stylesheets/authpages.css" />
+    <link rel="stylesheet" href="/stylesheets/profile.css" />
 </head>
 
-
+<section>
 <h2>User Profile</h2>
 
 <h4 class = 'username'>
@@ -27,10 +27,10 @@
         {{/each}}
         <hr>
     {{/each}}
-   
+
 </div>
 
-
+</section>
 
 
 
