--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -3,20 +3,27 @@
     <link rel="stylesheet" href="/stylesheets/authpages.css" />
 </head>
 
-<h2>Sign Up</h2>
-
+<center>
+<div class="authform">
+<h2>Welcome!</h2>
+<br>
 <form action="/signup" method="post">
 <label for="username">
     <input type="text" name="username" placeholder="Add Username">
 </label>
-
+<br>
+<br>
 <label for="password">
     <input type="text" name="password" placeholder="Add Password">
 </label>
-
-<label for="email">email
-    <input type="email" name="email">
+<br>
+<br>
+<label for="email">
+    <input type="email" name="email" placeholder="Email">
 </label>
-
-<button>Save</button>
+<br>
+<br>
+<button>Sign Up!</button>
 </form>
+</div>
+</center>
