--- a/views/index.hbs
+++ b/views/index.hbs
@@ -3,13 +3,12 @@
 
 
 <header>
-    
     <div id="intro" class="bg-image">
         <div class="mask">
             <div class="container d-flex align-items-center justify-content-center text-center h-100">
                 <div class="text-white">
                     <h1 class="mb-3">Hello Closet!</h1>
-                    <h1 class="mb-4">Welcome to Your Bitch'n Closet</h5>
+                    <h2 class="mb-4">Welcome to Your Bitch'n Closet</h2>
                     <div class= "buttons-section">
                         <button> Learn More </button> 
                         <button><a class="nav-link" href="/signup">Sign Up</a></button>
@@ -18,5 +17,38 @@
             </div>
         </div>
     </div>
-
 </header>
+
+
+    <div class="mid-section">
+        <div class="box">
+            <img src="/images/item-icon.png">
+            <h4>Organize Your Closet Items</h4>
+            <div>
+                <p>Keep all your items organized</p>
+            </div>
+        </div>
+        <div class="box">
+            <img src="/images/outfit-icon.png">
+            <h4>Make Outfits</h4>
+            <div>
+                <p>Create limitless outfits using your items </p>
+            </div>
+        </div>
+        <div class="box">
+            <img src="/images/like-icon.png">
+            <h4>Save Outfits</h4>
+            <div>
+                <p>Like your best outfits to save them for later</p>
+            </div>
+        </div>
+    </div>
+    
+    <div class="bottom-section">
+        <div class="box1">
+        <img src="/images/outfits.png">
+        </div>
+        <div class="box2">
+        <img src="/images/add-item.png">
+        </div>
+    </div>
