--- a/views/items/new-item.hbs
+++ b/views/items/new-item.hbs
@@ -3,6 +3,7 @@
     <link rel="stylesheet" href="/stylesheets/items.css" />
 </head>
 
+<section>
 <h2 class="new-celeb">Add a New Item</h2>
 <br>
 <form class= "new-item-form" action="/items/create" method="post" enctype="multipart/form-data">
@@ -78,5 +79,5 @@
     <br>
     <button>Submit</button>
 </form>
-
+</section>
 
