--- a/views/outfits/createOutfit.hbs
+++ b/views/outfits/createOutfit.hbs
@@ -4,11 +4,11 @@
 </head>
 
 
-
 <div>
 <form action="/outfits/create" method="post">
-<center><button>Add Items to Outfit</button></center>
+<center><button class="create-btn">Add Items to Outfit</button></center>
 </div>
+
 <br>
 <div class="row">
     {{#if theUser}}
