--- a/views/items/items.hbs
+++ b/views/items/items.hbs
@@ -15,7 +15,7 @@
     </div>
 </div> --}}
 
-<h2><center>Your Closet</center></h2>
+<h2><center>Hello Closet!</center></h2>
 <br>
 <center><form class="filter-item" action="/items/filter" method="get">
 <label>Filter by Item Type:</label>
