--- a/views/index.hbs
+++ b/views/index.hbs
@@ -20,7 +20,7 @@
 </header>
 
 
-    <div class="mid-section">
+    <div class="mid-section" >
         <div class="box">
             <img src="/images/item-icon.png">
             <h4>Organize Your Closet Items</h4>
@@ -44,11 +44,42 @@
         </div>
     </div>
     
-    <div class="bottom-section">
-        <div class="box1">
-        <img src="/images/outfits.png">
+    <div class="bottom-section1" bo>
+        <div>
+        <img src="/images/girl smiling.png">
         </div>
-        <div class="box2">
-        <img src="/images/add-item.png">
+        <div class="blurb">
+            <h2>The #1 tool for keeping track of items and creating outfits</h2>
+            <button>Get Started!</button>
         </div>
     </div>
+
+    <footer>
+        <div class="footer-container">
+            <div>
+            <img src="/images/Hello Closet!.png" alt="logo" width="160px">
+            </div>
+            <div>
+                <ul>
+                    <li>Email: info@hellocloset.com</li>
+                    <li>Call:305-555-8888</li>
+                    <li>Follow: @hellocloset</li>
+                </ul>
+            </div>
+            <div>
+            <ul>
+                <li>About Us</li>
+                <li>Blog</li>
+                <li>Careers</li>
+                <li>Events</li>
+                <li>Privacy Policy</li>
+            </ul>
+            </div>
+        </div>
+        <center><p class="copyright-text">Copyright &copy; 2022 All Rights Reserved by HelloCloset! Inc.
+        </p></center>
+        </footer>
+    </footer>
+
+
+     
