--- a/views/outfits/createOutfit.hbs
+++ b/views/outfits/createOutfit.hbs
@@ -6,7 +6,9 @@
 
 <div>
 <form action="/outfits/create" method="post">
-<center><button class="create-btn">Add Items to Outfit</button></center>
+<center>
+    <button class="create-btn">Create Outfit Using Selected Items</button>
+</center>
 </div>
 
 <br>
