--- a/views/auth/changepassword.hbs
+++ b/views/auth/changepassword.hbs
@@ -3,9 +3,11 @@
     <link rel="stylesheet" href="/stylesheets/authpages.css" />
 </head>
 
+<center>
+<div class="authform">
 <h2>Change your password</h2>
 <h4>Username: {{theUser.username}}</h4>
-
+<br>
 <form action="/new-password" method="post">
 
 <div class="pass-input">
@@ -14,21 +16,22 @@
         <input type="text" name="oldpass">
     </label>
 </div>
-
+<br>
 <div class="pass-input">
     <label for="">
         New Password
         <input type="text" name="newpass">
     </label>
 </div>
-
+<br>
 <div class="pass-input">
     <label for="">
-        Confirm New Password
+        Confirm Password
         <input type="text" name="confirmnewpass">
     </label>
 </div>
-
-
-
+<br>
 <button>Submit</button>
+</form>
+</div>
+</center>
