--- a/views/index.hbs
+++ b/views/index.hbs
@@ -59,7 +59,7 @@
             <div>
             <img src="/images/Hello Closet!.png" alt="logo" width="160px">
             </div>
-            <div>
+            <div class="contact">
                 <ul>
                     <li>Email: info@hellocloset.com</li>
                     <li>Call:305-555-8888</li>
@@ -76,6 +76,7 @@
             </ul>
             </div>
         </div>
+        <br>
         <center><p class="copyright-text">Copyright &copy; 2022 All Rights Reserved by HelloCloset! Inc.
         </p></center>
         </footer>
