--- a/views/index.hbs
+++ b/views/index.hbs
@@ -8,7 +8,7 @@
             <div class="container d-flex align-items-center justify-content-center text-center h-100">
                 <div class="text-white">
                     <h1 class="mb-3">Hello Closet!</h1>
-                    <h2 class="mb-4">Welcome to Your Bitch'n Closet</h2>
+                    <h2 class="mb-4">Welcome to Your Closet</h2>
                     <div class= "buttons-section">
                         <button> Learn More </button> 
                         <button><a class="nav-link" href="/signup">Sign Up</a></button>
